# test-frontend-fastapi

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml
.specify/: feature.json
backend/: README.md  pyproject.toml
backend/src/certificate_app/: __init__.py  main.py
backend/src/certificate_app/application/dto/: certificate_search.py  provider_certificate.py
backend/src/certificate_app/application/ports/: certificate_provider.py
backend/src/certificate_app/application/use_cases/: search_certificates.py
backend/src/certificate_app/domain/: exceptions.py
backend/src/certificate_app/domain/entities/: certificate.py
backend/src/certificate_app/domain/value_objects/: certificate_filter.py
backend/src/certificate_app/infrastructure/config/: __init__.py  settings.py
backend/src/certificate_app/infrastructure/external_services/: __init__.py  certificate_provider_http.py  certificate_provider_mock.py
backend/src/certificate_app/interface/api/: certificates.py  error_handlers.py  frontend.py
backend/src/certificate_app/interface/controllers/: __init__.py  certificates.py
backend/src/certificate_app/interface/schemas/: __init__.py  certificates.py
backend/src/certificate_app/observability/: logging.py
backend/tests/contract/: test_get_certificates.py  test_get_certificates_errors.py
backend/tests/integration/: test_certificate_provider_http.py  test_frontend_serving.py
backend/tests/unit/: test_search_certificates.py  test_settings.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  (+2 more)
(+44 files in other folders)
